--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 body {
     text-align: center;
+    background-color: black;
 }
 
 #board {
     border: 3px solid;
+    background-color:lightgrey;
 }
 
 .description {
